--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,24 @@
     <TextView
             android:text="@string/hello"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteY="96dp"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/textView"/>
+            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="96dp"/>
+    <Button
+            android:text="@string/tap_here"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/tapHere"
+            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.857"/>
+    <ImageView
+            android:layout_width="201dp"
+            android:layout_height="210dp" app:srcCompat="@drawable/test2"
+            android:id="@+id/imageView" android:layout_marginBottom="328dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintVertical_bias="1.0"/>
+    <android.support.constraint.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
+                                        android:id="@+id/barrier" app:barrierDirection="left"/>
 </android.support.constraint.ConstraintLayout>
